# AMM-model-checker

./: .gitignore  .out.swp  CHANGELOG.md  README.md  additivity.smt2  amm-check.cabal  amm-netting.cabal  amm_query.smt2  amm_query2.smt2  check_goal(.smt2  check_goal.smt2  check_goal01.smt2  check_goal_backup.smt2  commands  commands2  commands3  commands4  commands5  commands6  commands_issue_EXCLAM  fee_nra.smt2  induction_reserves.smt2  listen_exec.sh  named_qf_nra.smt2  new_attempt.smt2  new_attempt_sat.smt2  new_swap.smt2  notes  oddity.smt2  out  partial_specified.smt2  playground  prob.smt2  qf_nra.smt2  reversibility.smt2  reversibility_.smt2  symbolic.smt2  testfile.smt2  testing  testingstuff.smt2  (+5 more)
app/: Main.hs
commands/: arbitrage_single_user  commands1  commands3  commands6  commands7  commands8  inductive_style_proof_non_depletion  long_distance_swap  same_dir_swap_2_users  sandwich  users_swap_pair
examples/: arbitrage_single_user  fee_vs_slippage  inductive_style_proof_non_depletion  long_distance_swap  netting_and_arbitrage  optimize_neg_exp  routing  same_dir_swap_2_users  sandwich  users_swap_pair
files/: unsat_core-qf_nra.smt2
lib/Concurrency/: Concurrency.hs  Concurrency_opt.hs
lib/Netting/: SymTab.hs
lib/Netting/Symbolic/: Basics.hs  Concurrency.hs  Concurrency_opt.hs  Repl.hs  SMT.hs  SMT_opt.hs  SMT_withconf.hs  Sem.hs  SymSem.hs  Utils.hs
lib/Netting/Symbolic/Interpreter/: Parser.hs  SymTab.hs
lib/Symbolic/: Repl.hs  SMT.hs  Sem.hs  Utils.hs
lib/Symbolic/Interpreter/: Parser.hs  SymTab.hs
tests/: Test.hs
tests/Examples/: Example1.hs  Example3.hs
tests/OtherTests/: RateAttack.hs
z3-incompleteness-issue/: qf_nra.smt2
