cabal-version:      2.4
name:               amm-check
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis: A model checker for AMMs

-- A URL where users can report bugs.
-- bug-reports: https://github.com/aleksanderJunge/thesis/issues

-- The license under which the package is released.
-- license: GNU General Public License version 3

-- The package author(s).
-- author: Aleksander Junge

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer: ajunge123@gmail.com

library check-lib
    exposed-modules: Symbolic.Repl,
                     Symbolic.Sem,
                     Symbolic.Interpreter.Parser,
                     Symbolic.Interpreter.SymTab
                     -- Symbolic.SMT_opt
    other-modules: Symbolic.SMT,
                   Symbolic.Utils
    build-depends: base,
                   containers,
                   random,
                   process,
                   extra,
                   directory,
                   ghc,
                   extra
    hs-source-dirs: lib
    default-language: Haskell2010

extra-source-files: CHANGELOG.md

executable amm-check
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    -- TODO: remove ghc and other dependencies, oince these are moved into lib
    build-depends:    base >=4.18.0.0 && <= 4.20.0.0, 
                      check-lib,
                      containers,
                      process,
                      ghc
    hs-source-dirs:   app
    default-language: Haskell2010

-- test-suite tests
--     type: exitcode-stdio-1.0
--     main-is: Test.hs
--     other-modules: Examples.IntroductionExample
--                    Examples.Example1,
--                    Examples.Example2,
--                    Examples.Example3,
--                    Examples.Example4,
--                    Examples.Example5,                   Examples.Example6,
--                    OtherTests.RateAttack
--     build-depends: base, 
--                    tasty, 
--                    tasty-hunit, 
--                    netting-lib,
--                    containers
--     hs-source-dirs: tests
--     default-language: Haskell2010